samples/_failures_safe/1761494815_c2854d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68776df3.c: In function ‘main’:
./samples/SAFE/__tmp_68776df3.c:146:5: error: expected expression at end of input
  146 |     if (!
      |     ^~
./samples/SAFE/__tmp_68776df3.c:146:5: error: expected declaration or statement at end of input
